--- a/Hello/db_connection/template/navbar.html
+++ b/Hello/db_connection/template/navbar.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav >
-        <a href="/">Home</a> |
+        <a href="/home">Home</a> |
         <a href="get_all_users">Users</a> |
         <a href="/videos">Videos</a> |
-        <a href="/contact">Contact</a>
+        <a href="">Contact</a>
     </nav>
 
     {{ block "content" . }}{{ end }}
